observability/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: signoz-ingressroute
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`signoz.macbytes.io`)
      kind: Rule
      services:
        - name: signoz
          port: 8080
  tls:
    secretName: signoz-tls-certificate
